Fixed issue #9 on transforms encompassing entire container, fixed bottom gap on container as well

--- a/css/controls.css
+++ b/css/controls.css
@@ -1,3 +1,22 @@
+.handle {
+	position: absolute;
+	top: 0em;
+	left: 0em;
+	width: 100%;
+	height: 100%;
+}
+
+.container {
+	position: absolute;
+	display: inline;
+	top: 0em;
+	left: 11em;
+}
+
+.container * {
+	vertical-align: top;
+}
+
 .container:hover .move.active .scale.active{
 	display: inline;
 }
